--- a/src/ui/user/Avatar.pug
+++ b/src/ui/user/Avatar.pug
@@ -8,11 +8,16 @@ script.
 				img_url = user.profile_img
 		)
 
-a(href='/u/{username}')
-	img.avatar(alt='u/{username}' src={img_url})
+{#if username == '[deleted]'}
+	.avatar.avatar-not-available
+{:else}
+	a(href='/u/{username}')
+		img.avatar(alt='u/{username}' src={img_url})
 
 style.
 	.avatar
 		aspect-ratio 1
 		border-radius 999px
 		height 20px
+	.avatar-not-available
+		border 4px dashed #666
