--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -65,7 +65,8 @@ a
 		font-size 0.8em
 		height 1.25em
 		line-height 1.25
-		margin-right 0.5em
+		margin-left 0.2em
+		margin-right 0.4em
 		padding 0 0.5em
 	a:not(:is([href^='/'], [href^='#']))::before
 		background lightskyblue
@@ -76,7 +77,8 @@ a
 		font-size 0.8em
 		height 1.25em
 		line-height 1.25
-		margin-right 0.5em
+		margin-left 0.2em
+		margin-right 0.4em
 		padding 0 0.125em
 address
 	font-style normal
