--- a/src/ui/subreddit/Sidebar.pug
+++ b/src/ui/subreddit/Sidebar.pug
@@ -50,20 +50,20 @@ style.
 		padding 10px
 	.subreddit-rule
 		cursor pointer
+		font-size 9pt
+		letter-spacing 0.03em
 		padding 5px
 	.subreddit-rule-description
-		border-left 3px solid #666
-		font-size 8pt
-		margin 20px 0
-		margin-left 32px
-		padding 0 33px
+		border-left 1px solid #666
+		font-size 9pt
+		margin 1em
+		padding 0 3em
 	.subreddit-rule-name
-		font-size 10pt
-		font-weight bold
+		text-decoration underline
 	.subreddit-rule-number
 		font-feature-settings 'tnum'
-		font-size 16px
 		font-weight bold
+		letter-spacing 0
 	.subreddit-rule-summary
 		display grid
 		grid-template-columns 48px 1fr
