--- a/src/ui/post/Flair.pug
+++ b/src/ui/post/Flair.pug
@@ -5,8 +5,7 @@ script.
 	export rich_text = null
 	export text = null
 
-span.flair
-	.flair-color(style="background: {color || 'orangered'}; color: {color ? (new Color(color)).asContrastHex() : 'white'}")
+span.flair(style="background-color: {color || 'white'}; color: {color ? (new Color(color)).asContrastHex() : 'black'}")
 	{#if rich_text && rich_text.length}
 		{#each rich_text as segment}
 			{#if segment.e === 'text'}
@@ -22,12 +21,12 @@ span.flair
 style.
 	.flair
 		align-items center
+		border 2px solid
 		border-radius 99px
 		display inline-flex
-		gap 1ch
-	.flair-color
-		aspect-ratio 1
-		border-radius 50%
-		height 5px
+		font-size 9pt
+		gap 0.5ch
+		padding 0 1em
+		white-space pre
 	.flair-emoji
 		height 16px
