--- a/src/ui/post/Post.pug
+++ b/src/ui/post/Post.pug
@@ -66,27 +66,28 @@ svelte:head
 {:else if post}
 	article.post(bind:this={DOM.post} on:scroll={(e) => current_scroll = e.target.scrollTop})
 		header.post-header
-			Avatar(username={post.author})
-			{#if post.distinguished}
-				Distinguish(type={post.distinguished})
-			.post-tags
-				{#if post.archived}
-					Tag(name='archived')
-				{#if post.spoiler}
-					Tag(name='spoiler')
-				{#if post.locked}
-					Tag(name='locked')
-				{#if post.quarantine}
-					Tag(name='quarantined')
-				{#if post.over_18}
-					Tag(name='nsfw')
-				{#if post.stickied}
-					Tag(name='sticky')
-				{#if post.is_original_content}
-					Tag(name='oc')
-			time.post-create-date {Time.sToRelDateStr(post.created_utc, { abbr: false })} ago
 			h1.post-title {post.title}
-			Score(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.submit(api.ID('post_vote', short_id), { numerical_vote: vote })} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
+			.post-metadata
+				{#if post.distinguished}
+					Distinguish(type={post.distinguished})
+				Avatar(username={post.author})
+				Score(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.submit(api.ID('post_vote', short_id), { numerical_vote: vote })} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
+				time.post-create-date {Time.sToRelDateStr(post.created_utc, { abbr: false })} ago
+				.post-tags
+					{#if post.archived}
+						Tag(name='archived')
+					{#if post.spoiler}
+						Tag(name='spoiler')
+					{#if post.locked}
+						Tag(name='locked')
+					{#if post.quarantine}
+						Tag(name='quarantined')
+					{#if post.over_18}
+						Tag(name='nsfw')
+					{#if post.stickied}
+						Tag(name='sticky')
+					{#if post.is_original_content}
+						Tag(name='oc')
 		section.post-content
 			{#if post.format === 'self'}
 				{#if !post.selftext.length}
@@ -178,8 +179,6 @@ style.
 		width 480px
 		&::-webkit-scrollbar
 			display none
-	.post-create-date
-		color #888
 	.post-content
 		margin-top 1em
 	.post-comments
@@ -204,8 +203,8 @@ style.
 	.post-gallery-image
 		width 100%
 	.post-gallery-image-caption
-		margin-top 1em
 		color #aaa
+		text-align center
 	.post-gallery-item
 		display flex
 		flex-flow column nowrap
@@ -219,6 +218,12 @@ style.
 		display flex
 		gap 1em
 		margin-top 1em
+	.post-metadata
+		align-items center
+		color #888
+		display flex
+		gap 10px
+		margin-top 1ch
 	.post-minimap
 		position fixed
 		right 0
@@ -237,5 +242,5 @@ style.
 	.post-title
 		font-size 12pt
 		font-weight inherit
-		letter-spacing 0.3px
-		line-height 1.3
+		letter-spacing 0.025em
+		line-height 1.444
